--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,9 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
+    //Roboelectirc
+    testImplementation 'org.robolectric:robolectric:4.4'
+
     //InstantTaskExecutorRule
     androidTestImplementation 'androidx.arch.core:core-testing:2.1.0'
     testImplementation 'androidx.arch.core:core-testing:2.1.0'
@@ -131,6 +134,8 @@ dependencies {
 // Coroutine Dependency
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.3"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.3"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.4.2"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.3"
 
     // Room dependency
     implementation "androidx.room:room-runtime:2.3.0"
