--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-kapt'
-    id 'kotlin-android-extensions'
+    id 'kotlin-parcelize'
 }
 
 android {
@@ -95,8 +95,8 @@ dependencies {
 // Rounded ImageView
     implementation 'com.makeramen:roundedimageview:2.3.0'
 
-// Bubble Navigation
-    implementation 'com.gauravk.bubblenavigation:bubblenavigation:1.0.7'
+//// Bubble Navigation
+//    implementation 'com.gauravk.bubblenavigation:bubblenavigation:1.0.7'
 
 //material design/viewpager
     implementation 'com.google.android.material:material:1.3.0'
