--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,11 @@ android {
     buildFeatures {
         viewBinding = true
     }
+
+//    testOptions {
+//        unitTests.returnDefaultValues = true
+//        unitTests.includeAndroidResources = true
+//    }
 }
 
 dependencies {
@@ -67,8 +72,6 @@ dependencies {
 
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
 
-    //Roboelectirc
-    testImplementation 'org.robolectric:robolectric:4.4'
 
     //InstantTaskExecutorRule
     androidTestImplementation 'androidx.arch.core:core-testing:2.1.0'
@@ -86,9 +89,12 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     androidTestImplementation 'androidx.test:rules:1.3.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-//mockito
+
+    //mockito
     testImplementation 'org.mockito:mockito-core:3.6.0'
     testImplementation 'org.mockito:mockito-inline:3.6.0'
+    //Roboelectirc
+    testImplementation 'org.robolectric:robolectric:4.4'
 
 //recyclerview
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
